  
  syntax = "proto3";

  
  option go_package = "./proto";

  
  package proto;

  
  
  service NodeService {
    
    rpc SendTransaction (Transaction) returns (Ack);

    
    rpc AnnounceBlock (Block) returns (Ack);

    
    
    rpc GetBlocks (GetBlocksRequest) returns (stream Block);

    
    rpc GetKnownNodes (EmptyRequest) returns (KnownNodesResponse);

    
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);

    
    rpc FindSpendableUTXOs (FindSpendableUTXOsRequest) returns (FindSpendableUTXOsResponse);

    
    rpc GetContractState (GetContractStateRequest) returns (GetContractStateResponse);
  }

  
  

  message TxInput {
    bytes tx_id = 1;        
    int32 vout_index = 2;   
    bytes signature = 3;    
    bytes public_key = 4;   
  }

  message TxOutput {
    int64 value = 1;          
    bytes pub_key_hash = 2;   
  }

  message Transaction {
    bytes id = 1;
    repeated TxInput vin = 2;   
    repeated TxOutput vout = 3;  
    int32 type = 4;    
    bytes payload = 5; 
  }

  message Block {
    int64 timestamp = 1;
    bytes prev_block_hash = 2;
    bytes hash = 3;
    repeated Transaction transactions = 4;
    int64 nonce = 5;
  }

  

  message FindSpendableUTXOsRequest {
    string address = 1;
    int64 amount = 2;
  }

  
  message SpendableUTXO {
    bytes tx_id = 1;
    int32 vout_index = 2;
    int64 amount = 3;
    bytes pub_key_hash = 4; 
  }

  message FindSpendableUTXOsResponse {
    int64 accumulated_amount = 1;
    repeated SpendableUTXO utxos = 2;
  }

  

  
  message Ack {
    bool success = 1;
    string message = 2;
  }

  
  message GetBlocksRequest {
    
    
    bytes from_hash = 1;
  }

  
  message EmptyRequest {}

  
  message KnownNodesResponse {
    repeated string addresses = 1; 
  }

  message GetBalanceRequest {
    string address = 1; 
  }

  message GetBalanceResponse {
    int64 balance = 1; 
  }

  
  message GetContractStateRequest {
    string contract_address = 1; 
    string key = 2;              
  }

  message GetContractStateResponse {
    string value = 1; 
  }